# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django-test.yml  heroku.yml  main.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json
task_manager/: custom_helper_classes.py  fields.py  filters.py  forms.py  models.py  settings.py  shared_mixin_classes.py  urls.py  views.py  wsgi.py
task_manager/apps/labels/: forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/users/: forms.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_rename_status_name_status_name.py  0003_alter_status_creation_date.py  0004_alter_status_name.py  0005_task.py  0006_auto_20210908_1008.py  0007_auto_20210913_1051.py
task_manager/templates/layouts/: form.html
task_manager/templates/task_manager/: base_generic.html  delete_user.html  index.html  login.html  statuses.html  update_user.html  users.html
task_manager/tests/: test_filtering.py  test_specific_functionality.py  test_working_with_labels.py  test_working_with_statuses.py  test_working_with_tasks.py  test_working_with_users.py  tests.py
task_manager_project/: Procfile  manage.py
task_manager_project/task_manager/: views.py
task_manager_project/task_manager_project/: settings.py  urls.py
(+22 files in other folders)
